--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                 </div>
                 <input name="maiusculo" type="checkbox">
                 <label for="maiusculo">Letras maiusculas</label>
+                <input name="minusculo" type="checkbox">
                 <div class="parametro-senha">
+              <label for="minusculo">Letras minusculas</label>
+
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                 </div>
             </div>
