--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                 </div>
+                <div>
                 <input name="maiusculo" type="checkbox">
                 <label for="maiusculo">Letras maiusculas</label>
-                <input name="minusculo" type="checkbox">
-                <div class="parametro-senha">
-              <label for="minusculo">Letras minusculas</label>
-
+</div>
+<div>
+                <input name="minusculo" type="checkbox"
+   <label for="maiusculo">Letras maiusculas</label>
+</div>
+</div>
+           <div class="parametro-senha"></div>
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                 </div>
             </div>
